# ExternalDebugDemo

./: .gitattributes  .gitignore  LICENSE  README.md
ExternalDebugDemo/: SysblockDemo.mo  SysblockDemoMultiOutput.mo  SysplorerDemo.mo  package.mo  package.order
ExternalDebugDemo/Resources/: clearCache.bat  debug_build.sh  debug_build_gcc.bat  debug_build_msvc.bat
ExternalDebugDemo/Resources/1_StaticLibrary/: CMakeLists.txt  debug_build.sh  debug_build_gcc.bat  debug_build_msvc.bat
ExternalDebugDemo/Resources/1_StaticLibrary/src/: my_add.cpp
ExternalDebugDemo/Resources/2_SharedLibrary/: CMakeLists.txt  debug_build_gcc.bat  debug_build_msvc.bat
ExternalDebugDemo/Resources/2_SharedLibrary/src/: my_div.cpp  my_integer.cpp  my_integer.h  my_integer.hpp
ExternalDebugDemo/Resources/C-Source/: my_fcn.c  my_fcn.h
ExternalDebugDemo/Resources/Include/: common.h  my_add.h  my_div.h
ExternalDebugDemo/Resources/TestLibrary/: buildTest.bat  load_library.c  load_library.h  main.c
ExternalDebugDemo/Resources/TestLibrary2/: CMakeLists.txt  buildmsvc.bat  debug.bat
ExternalDebugDemo/Resources/TestLibrary2/src/: load_library.c  load_library.h  main.cpp
